# AAM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindTinyXML.cmake
config/: detect_face.xml
src/: AAM.cpp  DetectFace.cpp  DetectFace.h  fragmentshader.glsl  vertexshader.glsl
